--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2018"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-pdf-canvas = "0.6.0"
+skia-safe = "0"
 structopt = "0.3"
 confy = "0.4"
